[gd_scene load_steps=4 format=3 uid="uid://db8yh7nc2dxqn"]

[ext_resource type="Texture2D" uid="uid://cvv5tn6f4lsb2" path="res://src/assets/sprites/placeholder_pickup.png" id="1_ct7mb"]
[ext_resource type="Script" path="res://src/entities/props/interactable_props/pickup_interactable/pickup_interactable.gd" id="1_vq348"]

[sub_resource type="BoxShape3D" id="BoxShape3D_26uhx"]

[node name="PickupInteractable" type="Area3D"]
script = ExtResource("1_vq348")

[node name="Sprite3D" type="Sprite3D" parent="."]
alpha_cut = 1
texture_filter = 0
texture = ExtResource("1_ct7mb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.204511, 0)
shape = SubResource("BoxShape3D_26uhx")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
